agrege un comentario en index html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<p class="mensaje">
 					<textarea class="input" id="mensaje" placeholder="Mensaje" name="mensaje" onblur="revisar(this); revisaLongitud(this, 30)" onkeyup="revisar(this); revisaLongitud(this, 30)" autocomplete="off" ></textarea>
 				</p>
-				
+				<p>CAMBIO PARA GIT </p>
 				<div class="enviar">
 					<input type="submit" value="ENVIAR" id="enviar"/>
 					<div class="transicion"></div>
